# wakaima

./: .gitignore  README.md  package.json  turbo.json
.github/workflows/: actions
apps/agents-service/: .gitignore  package.json  pyproject.toml  test.py  x.md
apps/agents-service/app/: main.py
apps/agents-service/app/agents/: finder.py  mailer.py
apps/agents-service/app/core/: data.py  models.py  nodes.py  prompts.py  schemas.py
apps/agents-service/app/middleware/: auth.py
apps/agents-service/app/routes/v1/: emails.py  leads.py
apps/agents-service/archive/: company.json  lead-agriculture.json  leads.json  letter.md  profile.md  profile_clean.md  scrape.json  x.md
apps/agents-service/lib/actions/: extraction.py
apps/web/: components.json  declarations.d.ts  package.json  prisma.config.ts  test.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/archive/: email-loading-issue.md  leads.json
apps/web/components/: desktop-nav.tsx  editor.tsx  header.tsx  hero.tsx  login-form.tsx  logos-section.tsx  mobile-nav.tsx  nav-links.tsx  p-combobox-10.tsx  p-input-1.tsx  signup-form.tsx
apps/web/docs/: dashboard-charts.md
apps/web/emails/: eagle-lead.tsx  notion-magic-link.tsx  plaid-verify-identity.tsx  stripe-welcome.tsx  vercel-invite-user.tsx
apps/web/lib/: auth-client.ts  auth.ts  prisma.ts  profile-parser.ts  service-url.ts  store.ts  types.ts
apps/web/lib/data/: draft.ts
apps/web/mock-data/: leads.ts
apps/web/prisma/: dev.db  schema.prisma
apps/web/react-email-starter/: package.json
apps/web/store/: leads-store.ts
(+40 files in other folders)
