[project]
name = "agents-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.8.9",
    "cst-lsp>=0.1.3",
    "dotenv>=0.9.9",
    "exa-py>=1.16.2",
    "fastapi-cloud-cli>=0.21.0",
    "fastapi[standard]>=0.136.3",
    "langchain>=1.3.4",
    "langchain-exa>=1.1.0",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.4",
    "python-dotenv>=1.2.2",
    "tool>=0.8.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]
